WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300872
[WebCore] Debug assertion fails in needsTikTokOverflowingContentQuirk
https://bugs.webkit.org/show_bug.cgi?id=300872
Summary
[WebCore] Debug assertion fails in needsTikTokOverflowingContentQuirk
Tadeu Zagallo
Reported
2025-10-16 01:16:05 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-16 01:16:14 PDT
<
rdar://problem/162756863
>
Tadeu Zagallo
Comment 2
2025-10-16 01:20:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52456
EWS
Comment 3
2025-10-16 14:01:45 PDT
Committed
301658@main
(bd789d34b3e7): <
https://commits.webkit.org/301658@main
> Reviewed commits have been landed. Closing PR #52456 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug