[WebCore] Debug assertion fails in needsTikTokOverflowingContentQuirk https://bugs.webkit.org/show_bug.cgi?id=300872 rdar://162756863

Reviewed by Sammy Gill.

When navigating to https://threejs.org/examples/?q=webgpu#webgpu_loader_texture_ktx2
in a Debug build of MiniBrowser we get following assertion:

```
ASSERTION FAILED: hasClass()
/Volumes/Shared/wk1/OpenSource/Source/WebCore/dom/ElementInlines.h(150) : const SpaceSplitString &WebCore::Element::classNames() const
1   0x3051b5268 WebCore::Element::classNames() const
2   0x306d44168 WebCore::Quirks::needsTikTokOverflowingContentQuirk(WebCore::Element const&, WebCore::RenderStyle const&) const::$_3::operator()() const
...
```

That seems to be caused by calling `Element::classNames` in `Quirks.cpp:2031` without
first checking whether `Element::hasClass`, so I added the check to pre-existing
early exit conditions.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsTikTokOverflowingContentQuirk const):

Canonical link: https://commits.webkit.org/301658@main